[package]
edition = "2021"
name = "native"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
android_logger = "0.13.1"
anyhow = "1"
btleplug = {version = "0.10", features = ["serde"]}
flutter_rust_bridge = "1"
lazy_static = "1.4.0"
log = {version = "0.4.17", features = ["kv_unstable"]}
parking_lot = "0.12.1"
simplelog = "0.12.0"
time = "0.3.17"
tokio = {version = "1.22.0", features = ["macros", "rt", "rt-multi-thread"]}
